# license_plate_reader

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup_darknet.sh  setup_images.sh
picode/: 20240505_225417.avi  20240505_225419.avi  backup.py  mpu.py
scripts_and_files/: analyze.py  convert_annotations.py  obj.data  yolov3-custom.cfg
